<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InterfazLinearLayout</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cajaA">A</string>
    <string name="cajaB">B</string>
    <string name="cajaC">C</string>
    <string name="cajaD">D</string>
    <string name="cajaE">E</string>
    <string name="cajaF">F</string>
    <string name="cajaH">H</string>

</resources>
